[workspace]
members = ["telers", "telers-*", "examples/*"]
default-members = ["telers", "telers-*", "examples/*"]
resolver = "2"

[profile.dev]
# Disabling debug info speeds up builds a bunch and we don't rely on it for debugging that much.
debug = 0

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[patch.crates-io]
telers = { path = "telers" }
telers-macros = { path = "telers-macros" }
